--- a/index.html
+++ b/index.html
@@ -42,23 +42,9 @@
                 <p>Canvasser</p>
             </li>
         </ul>
-        <hr>
-        <ul>
-            <li>Download an <a href="html5.png" download>HTML5 Favicon</a></li>
-            <li>
-                Contact me at <a href="mailto:random@email.com">my email address</a>.
-            </li>
-            <li>
-                Dial <a href="tel:+1234567890">my phone number</a>.
-            </li>
-            <li>
-                Open <a href="https://www.google.com/" target="_blank">Google</a> in a new tab.
-            </li>
-        </ul>
-        <hr>
-        &lt;&lt;&lt; <a href="about.html">Shad Khan</a> &gt;&gt;&gt;
+        &lt;&lt;&lt; <a href="index.html">Shad Khan</a> &gt;&gt;&gt;
         <p>
-            <a href="/01_lesson/index.html">Back to Home</a>
+            <a href="/index.html">Back to Home</a>
         </p>
     </body>
 </html>
